Remove preview args from ObjectMethodsTest