@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,9 +24,8 @@
 /*
  * @test
  * @summary Basic tests for ObjectMethods
- * @compile --enable-preview -source ${jdk.version} ObjectMethodsTest.java
- * @run testng/othervm --enable-preview ObjectMethodsTest
- * @run testng/othervm/java.security.policy=empty.policy --enable-preview ObjectMethodsTest
+ * @run testng/othervm ObjectMethodsTest
+ * @run testng/othervm/java.security.policy=empty.policy ObjectMethodsTest
  */
 
 import java.lang.invoke.CallSite;
